# pathos

./: .gitignore  README.md  modal_app.py  package.json  pyproject.toml
convex/: README.md  schema.ts  submissions.ts
data/fixtures/: BRCA1_c.100C_T_p.Pro34Ser.json  BRCA1_c.1067A_G_p.Gln356Arg.json  BRCA1_c.181T_G_p.Cys61Gly.json  BRCA1_c.1865C_T_p.Ala622Val.json  BRCA1_c.3373C_T_p.Pro1125Ser.json  BRCA1_c.3548A_G_p.Tyr1183Cys.json  BRCA1_c.3783A_G_p.Leu1261eq.json  BRCA1_c.4039A_G_p.Arg1347Gly.json  BRCA1_c.42C_A_p.Val14eq.json  BRCA1_c.4837A_G_p.Ser1613Gly.json  BRCA1_c.4956G_A_p.Met1652Ile.json  BRCA1_c.5074G_A_p.Asp1692Asn.json  BRCA1_c.5096G_A_p.Arg1699Gln.json  BRCA1_c.5096G_C_p.Arg1699Pro.json  BRCA1_c.5117G_A_p.Gly1706Glu.json  BRCA1_c.5266dup.json  BRCA1_c.5333-1G_A.json  BRCA1_c.68_69del.json  BRCA2_c.1114A_C_p.Asn372His.json  BRCA2_c.5946del.json  BRCA2_c.7008-2A_C.json  BRCA2_c.7976+5G_A.json  BRCA2_c.8954-3C_G.json  BRCA2_c.9872C_T_p.Ser3291Phe.json  BRCA2_c.9976A_T_p.Lys3326Ter.json
frontend/: HANDOFF.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: _shared-og.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
frontend/components/: animated-number.tsx  auto-refresh.tsx  confusion-matrix.tsx  convex-client-provider.tsx  ema-chart.tsx  hero-section.tsx  leaderboard-dashboard.tsx  leaderboard-table.tsx  live-countdown.tsx  (+5 more)
functions/: api.py  orchestrator.py  scheduler.py  score_round.py
scripts/: manual_round.py  validate_fixtures.py
(+22 files in other folders)
