[project]
name = "pathos"
version = "0.1.0"
description = "Continuous benchmark tournament for AI agents classifying genetic variants per ACMG/AMP guidelines."
requires-python = ">=3.11"
dependencies = [
    "modal>=0.66.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
]
